# punchcard

./: AGENTS.md  Cargo.toml
docs/: FIX.md  FUNCTIONALITY.md
src/: deck.rs  encoding.rs  graphics.rs  lib.rs  main.rs  punchcards.rs  templates.rs
src/cli/: audit.rs  card.rs  common.rs  deck.rs  encode.rs  mod.rs  render.rs  seq.rs  template.rs  utils.rs  verify.rs
src/core/: deck.rs  encoding.rs  mod.rs  punchcards.rs  templates.rs
src/image/: mod.rs  paint.rs
