[package]
name = "punchcard"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "IBM 80-column punch card emulator for modern workflows"
repository = "https://github.com/cnachen/punchcard"
authors = ["cnachen <cnachencli@live.cn>"]
readme = "README.md"
documentation = "https://docs.rs/punchcard"
keywords = ["punchcard", "IBM", "80-column", "emulator"]
categories = ["text-processing", "emulation"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
opt-level = 3
